# online_challenges

./: README.md
aoc2018/: CMakeLists.txt  aoc2018.kdev4
aoc2018/.kdev4/: aoc2018.kdev4
aoc2018/src/: CMakeLists.txt  aoc.cpp  aoc.hpp  day1a.cpp  day1b.cpp  day2a.cpp  day2b.cpp  day3a.cpp  day3b.cpp
aoc2019/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp
aoc2020/: CMakeLists.txt  day10a.cpp  day10b.cpp  day11a.cpp  day11b.cpp  day12a.cpp  day12b.cpp  day13a.cpp  day13b.cpp  day14a.cpp  day15a.cpp  day15b.cpp  day1a.cpp  day1b.cpp  day2a.cpp  day2b.cpp  day3a.cpp  day3b.cpp  day4a.cpp  day4b.cpp  day5a.cpp  day5b.cpp  day6a.cpp  day6b.cpp  day7a.cpp  day7b.cpp  day8a.cpp  day8b.cpp  day9a.cpp  day9b.cpp
aoc2021/: CMakeLists.txt  day1a.cpp  day1b.cpp  day2a.cpp  day2b.cpp  day3a.cpp  day3b.cpp
aoc2022/: CMakeLists.txt
aoc2022/common/aoc2022/: coord2i.hpp  vector2d.hpp
aoc2022/day01/: main.cpp
aoc2022/day01 copy/: day1a_simple.cpp
aoc2022/day03/: main_a.cpp
aoc2022/day04/: main_a.cpp  main_b.cpp
aoc2022/day05/: main_a.cpp  main_b.cpp
aoc2022/day06/: main_a.cpp
aoc2022/day07/: main_a.cpp  main_b.cpp
aoc2022/day08/: main_a.cpp  main_b.cpp
aoc2022/day09/: main_a.cpp  main_b.cpp
aoc2022/day10/: main_a.cpp
aoc2022/template/: main.cpp  main_b.cpp
aoc2024/: CMakeLists.txt
aoc2024/common/aoc2022/: headers.hpp
aoc2024/common/aoc2024/: coord2i.hpp  headers.hpp
aoc2024/day01/: day1a.cpp  main_b.cpp
aoc2024/day02/: main_a.cpp  main_b.cpp
aoc2024/template/: main_a.cpp
