cmake_minimum_required(VERSION 3.16)

project(aoc2022)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(common)

add_executable(day01 day01/main.cpp)
add_executable(day02a day02/main_a.cpp)
add_executable(day02b day02/main_b.cpp)
add_executable(day03a day03/main_a.cpp)
add_executable(day03b day03/main_b.cpp)
add_executable(day04a day04/main_a.cpp)
add_executable(day04b day04/main_b.cpp)
add_executable(day05a day05/main_a.cpp)
add_executable(day05b day05/main_b.cpp)
add_executable(day06a day06/main_a.cpp)
add_executable(day06b day06/main_b.cpp)
add_executable(day07a day07/main_a.cpp)
add_executable(day07b day07/main_b.cpp)
add_executable(day08a day08/main_a.cpp)
add_executable(day08b day08/main_b.cpp)
add_executable(day09a day09/main_a.cpp)
add_executable(day09b day09/main_b.cpp)
#add_executable(day1b day1b.cpp)
#add_executable(rtest reddit_test/main_a.cpp)